--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
 </head>
 
 <body onload="myFunction()">
-<div class="loading"><div class="typing">&lt;Adarsh Mishra /&gt;</div></div>
-    <nav>
 
+    <div class="loading">
+        <div class="typing">&lt;Adarsh Mishra /&gt;</div>
+    </div>
+    <nav>
         <div class="navbar-brand">Adarsh Mishra</div>
         <div class="toggle"><i class="fa fa-bars" id="m-icon"></i></div>
         <ul class="main-nav">
@@ -54,6 +56,7 @@
         </div>
 
     </div> -->
+    <div id="particles-js"></div>
     <div id="intro">
         <div class="container">
             <div class="row align-items-center">
@@ -65,9 +68,13 @@
                         <span>Adarsh</span> Mishra
                         <div class="designation mb-2">Computer Engineer</div>
                         <div class="description">Hey, I am Adarsh Mishra, currently pursuing a degree in Computer
-                            Engineering from Lokmanya Tilak College of Engineering. Steve Jobs once said, <i> "The only way
-                            to do great work is to love what you do"</i> and, this is the principle I have been following
-                            throughout my journey as a Web Developer. Developing websites is not only a job for me, but
+                            Engineering from Lokmanya Tilak College of Engineering. Steve Jobs once said, <i> "The
+                                only
+                                way
+                                to do great work is to love what you do"</i> and, this is the principle I have been
+                            following
+                            throughout my journey as a Web Developer. Developing websites is not only a job for me,
+                            but
                             it is also my passion which helps to portray my creativity into something as small as a
                             computer or a mobile screen.</div>
                     </div>
@@ -82,7 +89,6 @@
                             target="blank"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
-
             </div>
             <div class="knowmore text-center mt-4"><a href="#projects" class="btn submit-btn">Know More</a></div>
         </div>
@@ -138,9 +144,9 @@
                     <div class="description py-2">
                         <li> Developed a web templates for Cake Shop</li>
                         <li> Template
-                        also had User Registration</li>
+                            also had User Registration</li>
                         <li> Login and product Checkout Page
-                        using PHP and MySQL</li>
+                            using PHP and MySQL</li>
                     </div>
                 </div>
             </div>
@@ -156,8 +162,10 @@
                     <div class="description py-2">
                         <li>Website for <a href="http://littlekidsnursery.in" target="blank">Little Kids Nursery
                                 School</a></li>
-                        <li>Portfolio website for <a href="http://omkarmohite.me" target="blank">Omkar Mohite</a></li>
-                        <li>Portfolio website for <a href="http://pavankarajgar.me" target="blank">Pavan Karajgar</a>
+                        <li>Portfolio website for <a href="http://omkarmohite.me" target="blank">Omkar Mohite</a>
+                        </li>
+                        <li>Portfolio website for <a href="http://pavankarajgar.me" target="blank">Pavan
+                                Karajgar</a>
                         </li>
 
                     </div>
@@ -173,7 +181,8 @@
                 <h2 class="col-12 text-center py-4">Programming &amp; Scripting Languages</h2>
                 <div class="col-6 col-sm-4 col-md-2">
                     <div class="percentage">
-                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/css3.png" alt="icon"></div>
+                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/css3.png" alt="icon">
+                        </div>
                     </div>
                     <div class="title ">CSS</div>
                     <div class="baaar">
@@ -183,7 +192,8 @@
 
                 <div class="col-6 col-sm-4 col-md-2">
                     <div class="percentage">
-                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/php.png" alt="icon"></div>
+                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/php.png" alt="icon">
+                        </div>
                     </div>
                     <div class="title ">PHP</div>
                     <div class="baaar">
@@ -193,7 +203,8 @@
 
                 <div class="col-6 col-sm-4 col-md-2">
                     <div class="percentage">
-                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/python.png" alt="icon"></div>
+                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/python.png" alt="icon">
+                        </div>
                     </div>
                     <div class="title">Python</div>
                     <div class="baaar">
@@ -202,7 +213,8 @@
                 </div>
                 <div class="col-6 col-sm-4 col-md-2">
                     <div class="percentage">
-                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/html-5.png" alt="icon"></div>
+                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/html-5.png" alt="icon">
+                        </div>
                     </div>
                     <div class="title">HTML</div>
                     <div class="baaar">
@@ -215,7 +227,8 @@
                 <h2 class="col-12 text-center py-4">Frameworks &amp; Libraries</h2>
                 <div class="col-6 col-sm-4 col-md-2">
                     <div class="percentage">
-                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/nodejs.png" alt="icon"></div>
+                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/nodejs.png" alt="icon">
+                        </div>
                     </div>
                     <div class="title">NodeJs</div>
                     <div class="baaar">
@@ -306,14 +319,17 @@
             <div class="row justify-content-around align-items-center py-5">
                 <div class="col-12 col-md-6">
                     <div class="college-container">
-                        <div class="college-logo"><img src="images/lt-logo.png" class="image-fluid" alt="LTCOE"></div>
+                        <div class="college-logo"><img src="images/lt-logo.png" class="image-fluid" alt="LTCOE">
+                        </div>
                         <div class="college-name">Lokmanya Tilak College Of Engineering</div>
                         <div class="degree">BE (Computer Science)</div>
                         <div class="date">Present</div>
                         <div class="description mt-2">
                             Pursuing my degree, I gradually cultivated an interest in Web Development, and then I
-                            started with designing a website for <a href="https://csi-cesa.github.io">CSI-CESA Club</a>
-                            of the Computers Department. Furthermore, I created a website for the HackArena hackathon to
+                            started with designing a website for <a href="https://csi-cesa.github.io">CSI-CESA
+                                Club</a>
+                            of the Computers Department. Furthermore, I created a website for the HackArena
+                            hackathon to
                             be conducted in our college and also made some small web-related projects which you can
                             check out on <a href="https://github.com/adarshmishra07?tab=repositories"
                                 class="btn btn-social btn-github"><i class="fab fa-github"></i>Github</a>
@@ -322,7 +338,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
     <div id="contact">
@@ -349,7 +364,8 @@
                         </div>
                     </div>
                     <div class="form-group row justify-content-around justify-content-sm-center my-5">
-                        <div class="col-12 col-md-12 offset-md-7"><button type="submit" class="btn submit-btn">Submit</button>
+                        <div class="col-12 col-md-12 offset-md-7"><button type="submit"
+                                class="btn submit-btn">Submit</button>
                         </div>
                     </div>
 
@@ -370,6 +386,7 @@
     </div>
     <div id="switch"><i class="fas fa-lightbulb"></i></div>
     <div class="top"><a href="#"><i class="fa fa-arrow-up"></i></a></div>
+
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
@@ -378,53 +395,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
 </script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
-<script type="text/javascript">
-   (function(){
-      emailjs.init("user_OSKA997WcOIDihPkMJaJ6");
-   })();
-</script>
-<script>
-    $('.toggle').click(function () {
-        $('nav').toggleClass('nav-visible');
-        $('ul.main-nav').toggleClass('visible');
-    }   );
-
-    $("#getintouch").submit(function(e){
-        e.preventDefault();
-        var body = "Name " + $('#senderName').val() + " Message" + $('#Message').val();
-        console.log(body);
-        location.href=('mailto:adarshmishra0701@gmail.com?subject=From_Website&body='+body);
-        $('#getintouch').reset();
-    })
-
-
-var myVar;
-
-function myFunction() {
-  myVar = setTimeout(showPage, 3600);
-}
-
-function showPage() {
-  $(".loading").css('display',"none");
-}
-
-var basic = 0;
-
-$('#switch').click(function(){
-    if(basic==0){
-        console.log($('#theme-css').prop('href'));
-        // $('#theme-css').prop('href') = +'light.css';
-        $('link[href=""]').attr('href','./css/light.css');
-        basic=1;
-    }else{
-        $('link[href="./css/light.css"]').attr('href','');
-        basic=0;
-    }
-    
-})
-
-
-</script>
+<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+<script src="./script.js" defer></script>
 
 </html>
