--- a/index.html
+++ b/index.html
@@ -26,11 +26,8 @@
     <link rel="icon" href="images/favicon.ico">
 </head>
 
-<body onload="myFunction()">
+<body>
 
-    <div class="loading">
-        <div class="typing">&lt;Adarsh Mishra /&gt;</div>
-    </div>
     <nav>
         <div class="navbar-brand">Adarsh Mishra</div>
         <div class="toggle"><i class="fa fa-bars" id="m-icon"></i></div>
@@ -43,19 +40,6 @@
         </ul>
         </div>
     </nav>
-    <!-- <div class="navigation-menu">
-        <ul class="nm">
-            <li><span>Projects</span><a href="#projects"><i class="fas fa-laptop-code"></i></a></li>
-           <li><span>Certifications</span><a href="$certificates"><i class="fas fa-certificate"></i></a></li>
-            <li><span>Skills</span><a href="#skills"><i class="fas fa-code"></i></a></li>
-            <li><span>Education</span><a href="#education"><i class="fas fa-graduation-cap"></i></a></li>
-            <li><span>Contact</span><a href="#contact"><i class="fas fa-user"></i></a></li>
-        </ul>
-        <div class="floating-menu">
-            <i class="fas fa-route"></i>
-        </div>
-
-    </div> -->
     <div id="particles-js"></div>
     <div id="intro">
         <div class="container">
