--- a/index.html
+++ b/index.html
@@ -331,13 +331,13 @@
                     <div class="form-group row justify-content-around my-5">
                         <label class="col-12 col-md-2" for="senderName">Name</label>
                         <div class="col-12 col-md-8"><input type="name" class="form-control" id="senderName"
-                                placeholder="Name" required>
+                         required>
                         </div>
                     </div>
                     <div class="form-group row justify-content-around my-5">
                         <label class="col-12 col-md-2" for="email">Email address</label>
                         <div class="col-12 col-md-8"><input type="email" class="form-control" id="email"
-                                placeholder="Enter email" required></div>
+                         required></div>
                     </div>
                     <div class="form-group row justify-content-around my-5">
                         <label class="col-12 col-md-2" for="Message">Message</label>
