--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </div>
                 </div>
             </div>
-            <div class="knowmore text-center mt-4"><a href="#projects" class="btn submit-btn">Know More</a></div>
+            <div class="knowmore text-center mt-4" ></div>
         </div>
     </div>
     <div id="projects">
@@ -104,6 +104,12 @@
                         <img src="images/chat app.png" alt="Chat App">
                     </div>
                     <div class="title">Realtime Chat App</div>
+                </div>
+                <div class="col-12 col-md-4 my-3">
+                    <div class="project-body">
+                       <a href="http://photoeditor-am.netlify.app" target="_blank"> <img src="images/photoEditor.png" alt="PhotoEditor"></a>
+                    </div>
+                    <div class="title">PhotoEditor Web App</div>
                 </div>
             </div>
             <div class="text text-center">View all my projects on <a class="btn btn-social btn-github"
